--- a/css/my-style.css
+++ b/css/my-style.css
@@ -21,7 +21,6 @@ hr {
 /*navigation*/
 
 .navbar-default {
-    
     background-color: white;
     opacity: .8;
     border: none;
@@ -36,8 +35,11 @@ hr {
 }
 
 .top-buttons:hover {
+    text-align: justify;
+    width: [width of img];
+    height: 100px;
     background-image: url('https://placeholdit.imgix.net/~text?txtsize=9&txt=100%C3%97100&w=100&h=100');
-    height: 100px
+        
 }
 /*landing*/
 
@@ -172,6 +174,9 @@ fa-hand-o-down {
 /*iphone*/
 
 @media only screen and (max-width: 768px) {
+    
+    .top-buttons:hover {height: inherit;}
+   
     
     #landing h2 {
         font-size: 30px;
