--- a/css/my-style.css
+++ b/css/my-style.css
@@ -34,13 +34,7 @@ hr {
     color: #48783E;
 }
 
-.top-button:hover {
-    text-align: justify;
-    width: [width of img];
-    height: 100px;
-    background-image: url('https://placeholdit.imgix.net/~text?txtsize=9&txt=100%C3%97100&w=100&h=100');
-        
-}
+
 .top-buttons:hover {
     text-align: justify;
     width: [width of img];
@@ -55,29 +49,27 @@ hr {
     width: 50%;
     height: 500px;
     float: left;
-    border: none;
     background-color: #CC9999;
 }
 
 .topleft img { 
     height: 225px;
     border-radius: 100%;
-    border: 1px solid #CC9999;
-    margin: 10px 100px 0px 15px;
+    margin: 50px 20px;
+    margin-top: 90px;
 }
 
 .topright {
     width: 50%;
     height: 500px;
     float: right;
-    border: none;
-    border-radius: 0px;
-    background-color: #FFFFCC;
+    background-color: #9E9C80;
     padding-top: 60px;
-    border-radius; 0px 0px 0px 10px;
 }
 
+#phone {margin: -20px 20px;}
 
+#landing {margin-top: -50px;}
 
 #landing .col-sm-12 {
     margin-top: 100px;
