width for top left changed

--- a/css/my-style.css
+++ b/css/my-style.css
@@ -149,10 +149,10 @@ hr {
 }
 /*tablet*/
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
-    .topleft {
-        width: 100%;
-    }
+@media screen and (min-width: 768px) and (max-width: 968px) {
+    
+    .topleft {width: 100%}
+    
     #benefits img {
         height: 180px;
         width: 180px;
