--- a/css/my-style.css
+++ b/css/my-style.css
@@ -91,6 +91,8 @@ hr {
 }
 
 #who-we-are p {
+     text-align: justify;
+    width: [width of img];
     font-size: 20px;
 }
 
@@ -114,6 +116,8 @@ hr {
 }
 
 #activities p {
+     text-align: justify;
+    width: [width of img];
     margin-top: 50px;
     font-size: 18px;
 }
@@ -144,10 +148,8 @@ hr {
         margin-left: 50px;
     }
     #benefits p {
-        width: 180px;
         font-size: 12px;
-        margin-top: 15px;
-        margin-left: 50px;
+  
     }
     #who-we-are p {
         font-size: 16px;
@@ -160,7 +162,6 @@ hr {
 
 #activities p {
     margin-top: 0px;
-    text-align: center;
 }
 /*iphone*/
 
@@ -182,36 +183,29 @@ hr {
         padding: 5px;
         font-size: 15px;
     }
-    #map-canvas {
-        width: 500px;
-        height: 400px;
-        background-color: #CCC;
-        margin: 20px auto;
-        margin-top: 50px;
-    }
+    
     #landing .col-sm-3 {
         font-size: 20px;
         padding-left: 90px;
         width: 500px;
     }
-    #benefits {
-        text-align: center;
-    }
+    
     #benefits p {
         text-align: justify;
         width: [width of img];
-        margin: 10px 20px;
+        margin: 10px 30px;
+        font-size: 14px;
     }
     #who-we-are img {
         width: 70%;
-        margin-left: 90px;
+   margin: 0 auto;
     }
     #who-we-are p {
         font-size: 12px;
+       text-align: justify;
+        width: [width of img];
+        margin: 10px 30px;
         text-align: center;
-        margin-top: 20px;
-        width: 70%;
-        margin-left: 90px;
     }
     #activities p {
         text-align: center;
@@ -220,6 +214,6 @@ hr {
     }
     #activities img {
         width: 70%;
-        margin-left: 100px;
+        margin: 0 auto;
     }
 }
