--- a/css/my-style.css
+++ b/css/my-style.css
@@ -11,9 +11,11 @@ section {
 
 h2 {
     font-size: 40px;
-    margin: 30px;
+    margin:40px;
+   
 }
-
+h3 {color: cadetblue;
+ margin-bottom: 30px;}
 hr {
     width: 25%;
     border: 1px solid #000;
@@ -42,6 +44,13 @@ hr {
 }
 /*landing*/
 
+.top {
+    width: 100%;
+    height: 180px;
+      background-color: white;
+    opacity: .8;
+}
+
 .topleft {
     width: 50%;
     height: 500px;
@@ -49,10 +58,11 @@ hr {
     background-color: #CC9999;
 }
 
-.topleft img {
-    height: 225px;
+.top img {
+    height: 150px;
     border-radius: 100%;
-    margin: 20px 20px;
+    margin: -70px 20px;
+    float: left;
 }
 
 .topright {
@@ -67,8 +77,7 @@ hr {
     margin: 10px 20px;
       font-size: 25px;
     color: #ccc;
-    text-shadow: 1px 1px black;
-    text-decoration: none;
+    text-shadow: 1px 1px darkgrey;
 }
 
 #landing {
