--- a/css/my-style.css
+++ b/css/my-style.css
@@ -190,7 +190,7 @@ hr {
         padding-left: 90px;
         width: 500px;
     }
-    
+    #benefits img {margin-right: 0px;}  
     #benefits p {
         text-align: justify;
         width: [width of img];
