--- a/css/index-style.css
+++ b/css/index-style.css
@@ -10,7 +10,7 @@ body {
 
 .topleft {
     width: 50%;
-    height: 1000px;
+    height: 600px;
     float: left;
     background-color: #CC9999;
        padding-top: 160px;
@@ -29,7 +29,7 @@ opacity: .5;}
 
 .topright {
     width: 50%;
-    height: 1000px;
+    height: 600px;
     float: right;
     background-color: #9E9C80;
     padding-top: 160px;
@@ -39,29 +39,23 @@ opacity: .5;}
 
 @media only screen and (max-width: 768px) {
 .topleft {
-    width: 100%;
-
- 
-    background-color: #CC9999;
-       padding-top: 160px;
-    opacity: .8;
+float: none;
+   
 }
 
 .p:hover {text-decoration: none;
 opacity: .8}
 
 .p {font-family:monospace;
-    font-size: 120px;
+    font-size: 110px;
 text-decoration: none;
 color: cadetblue;
-opacity: .5;}
+opacity: .5;
+}
 
 
 .topright {
-    width: 100%;
-
-    background-color: #9E9C80;
-    padding-top: 160px;
-    opacity: .8;
+width: 100%
+    float: none;
 }
 }
