--- a/css/index-style.css
+++ b/css/index-style.css
@@ -40,6 +40,7 @@ opacity: .5;}
 @media only screen and (max-width: 768px) {
 .topleft {
 float: none;
+    width: 100%;
    
 }
 
@@ -55,7 +56,7 @@ opacity: .5;
 
 
 .topright {
-width: 100%
+width: 100%;
     float: none;
 }
 }
