--- a/css/index-style.css
+++ b/css/index-style.css
@@ -41,7 +41,8 @@ opacity: .5;}
 .topleft {
 float: none;
     width: 100%;
-   
+    height: 70%;
+   padding-top: 10px;
 }
 
 .p:hover {text-decoration: none;
@@ -58,5 +59,7 @@ opacity: .5;
 .topright {
 width: 100%;
     float: none;
+    height: 70%;
+    padding-top: 10px;
 }
 }
