--- a/css/index-style.css
+++ b/css/index-style.css
@@ -42,7 +42,7 @@ opacity: .5;}
 float: none;
     width: 100%;
     height: 70%;
-   padding-top: 10px;
+   padding-top: 5px;
 }
 
 .p:hover {text-decoration: none;
@@ -53,6 +53,7 @@ opacity: .8}
 text-decoration: none;
 color: cadetblue;
 opacity: .5;
+    font-size: 50px;
 }
 
 
@@ -60,6 +61,6 @@ opacity: .5;
 width: 100%;
     float: none;
     height: 70%;
-    padding-top: 10px;
+    padding-top: 5px;
 }
 }
