--- a/css/index-style.css
+++ b/css/index-style.css
@@ -42,7 +42,8 @@ opacity: .5;}
 float: none;
     width: 100%;
     height: 70%;
-   padding-top: 5px;
+  padding-top: 45px;
+    padding-bottom: 45px;
 }
 
 .p:hover {text-decoration: none;
@@ -61,6 +62,7 @@ opacity: .5;
 width: 100%;
     float: none;
     height: 70%;
-    padding-top: 5px;
+   padding-top: 45px;
+    padding-bottom: 45px;
 }
 }
