--- a/css/index-style.css
+++ b/css/index-style.css
@@ -17,14 +17,15 @@ body {
     opacity: .8;
 }
 
-.p:hover {text-decoration: none;
-opacity: .8}
+a:hover {text-decoration: none;
+opacity: .8;
+color: darkslateblue;}
 
 .p {font-family:monospace;
         font-size: 10vw;
 text-decoration: none;
 color: cadetblue;
-opacity: .5;}
+opacity: .7;}
 
 
 .topright {
